<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MaalApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="splash_screen">Welcome to Maal Counter. Disclaimer: This is not a game but simply a score calculator for a three-deck card game called Marriage, played widely in Nepal.</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="btn_start_scoreboard">Start a Scoreboard</string>
    <string name="btn_edit_maal">Edit "Maal" (points)</string>
    <string name="btn_how">How to play marriage</string>
    <string name="btn_help">Help</string>
    <string name="title_activity_score_board">ScoreBoard</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="dummy_button">OK</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="feedback">Feedback</string>
    <string name="title_activity_edit_maal">EditMaalActivity</string>
    <string name="maal_single_jhiplu">Single Jhiplu</string>
    <string name="maal_single_tiplu">Single Tiplu</string>
    <string name="maal_single_poplu">Single Poplu</string>
    <string name="maal_single_marriage">Single Marriage</string>
    <string name="maal_double_jhiplu">Double Jhiplu</string>
    <string name="maal_double_tiplu">Double Tiplu</string>
    <string name="maal_double_poplu">Double Poplu</string>
    <string name="maal_double_marriage">Double Marriage</string>
    <string name="maal_triple_jhiplu">Triple Jhiplu</string>
    <string name="maal_triple_poplu">Triple Poplu</string>
    <string name="ordinary_card_tunnella">Ordinary Card Tunnella</string>
    <string name="ordinary_joker_tunnella">Ordinary Joker Tunnella</string>
    <string name="poplu_jhiplu_tunnella">Poplu or Jhiplu Tunnella</string>
    <string name="multiplier">Multiplier</string>
	<string name="hint_maal">This is the number of points you want to assign to this maal.</string>
	<string name="btn_save">Save</string>
	<string name="dollar">$</string>
	<string name="rupees">NRs.</string>
	<string name="enter_players">Enter names of the players</string>
	<string name="player1">Player 1</string>
	<string name="player2">Player 2</string>
	<string name="player3">Player 3</string>
	<string name="player4">Player 4</string>
	<string name="player5">Player 5</string>
	<string name="player6">Player 6</string>
	<string name="next">Next</string>
	<string name="addInfoPlayers">Some fields can be left blank. Atleast two players\' names required to continue.</string>
	<string name="btn_ok">OK</string>
	<string name="add_points">Add Points</string>
	<string name="end_game">End Game</string>
	<string name="title_activity_scoreboard">ScoreboardActivity</string>
	<string name="chkbox_poplu">Poplu</string>
	<string name="one">1</string>
	<string name="two">2</string>
	<string name="chkbox_tiplu">Tiplu</string>
	<string name="chkbox_jhiplu">Jhiplu</string>
	<string name="marriage">Marriage</string>
	<string name="ordinaryCard">Ordinary Card</string>
	<string name="tipluOrJhiplu">Tiplu Or Jhiplu</string>
	<string name="tunnella">Tunnella</string>
	<string name="three">3</string>
	<string name="ordinary">Ordinary</string>
	<string name="poplu">Poplu</string>
	<string name="joker">Joker</string>
	<string name="title_activity_add_points">AddPointsActivity</string>
	<string name="seenJoker1">Seen Joker (not completed game)</string>
	<string name="completedGame1">Completed Game</string>
	<string name="notSeenJoker1">Not Seen Joker</string>
	<string name="dialogTitle">End of the Game</string>
    
</resources>